Bootstrap and helper method(s)

--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -10,7 +10,7 @@
       </ul>
     </div>
   <% end %>
-
+<div class="container">
   <div class="field">
     <%= f.label :customer_name %><br />
     <%= f.text_field :customer_name, value:customer_name(@order) %>
@@ -34,4 +34,5 @@
   <div class="actions">
     <%= f.submit %>
   </div>
+</div>
 <% end %>
