--- a/app/views/customers/edit.html.erb
+++ b/app/views/customers/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing customer</h1>
+<div class= "container">
+  <div class= "hero-unit"><h1>Editing customer</h1></div>
 
 <%= render 'form' %>
 
 <%= link_to 'Show', @customer %> |
 <%= link_to 'Back', customers_path %>
+</div>
