--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,6 +1,5 @@
 <div class="container" >
-  <div class = "span9" >
-    <h1>Listing customers</h1>
+    <div class="hero-unit"><h1>Listing customers</h1></div>
 
     <table class="table border table-striped">
       <tr>
@@ -27,5 +26,4 @@
     <br />
 
     <%= link_to 'New Customer', new_customer_path %>
-  </div>
 </div>
