--- a/app/views/customers/new.html.erb
+++ b/app/views/customers/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New customer</h1>
+<div class= "container" >
+	<div class= "hero-unit"><h1>New customer</h1></div>
 
-<%= render 'form' %>
+	<%= render 'form' %>
 
-<%= link_to 'Back', customers_path %>
+	<%= link_to 'Back', customers_path %>
+</div>
