--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing item</h1>
+<div class= "container">
+  <div class= "hero-unit"><h1>Editing item</h1></div>
 
 <%= render 'form' %>
 
 <%= link_to 'Show', @item %> |
 <%= link_to 'Back', items_path %>
+</div>
