--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New item</h1>
+<div class="container">
+	<div class="hero-unit"><h1>New item</h1></div>
 
-<%= render 'form' %>
+	<%= render 'form' %>
 
-<%= link_to 'Back', items_path %>
+	<%= link_to 'Back', items_path %>
+</div>
