--- a/app/views/orders/edit.html.erb
+++ b/app/views/orders/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing order</h1>
+<div class= "container">
+  <div class= "hero-unit"><h1>Editing order</h1></div>
 
-<%= render 'form' %>
+	<%= render 'form' %>
 
-<%= link_to 'Show', @order %> |
-<%= link_to 'Back', orders_path %>
+	<%= link_to 'Show', @order %> |
+	<%= link_to 'Back', orders_path %>
+</div>
