--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,29 +1,31 @@
-<h1>Listing orders</h1>
+<div class="container" >
+  <div class="hero-unit"><h1>Listing orders</h1></div>
 
-<table>
-  <tr>
-    <th>Customer</th>
-    <th>Quantity</th>
-    <th>Item name</th>
-    <th>Total cost</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
+  <table class= "table border table-striped">
+    <tr>
+      <th>Customer</th>
+      <th>Quantity</th>
+      <th>Item name</th>
+      <th>Total cost</th>
+      <th></th>
+      <th></th>
+      <th></th>
+    </tr>
 
-<% @orders.each do |order| %>
-  <tr>
-    <td><%= order.customer_name %></td>
-    <td><%= order.quantity %></td>
-    <td><%= order.item_name %></td>
-    <td><%= order.total_cost %></td>
-    <td><%= link_to 'Show', order %></td>
-    <td><%= link_to 'Edit', edit_order_path(order) %></td>
-    <td><%= link_to 'Destroy', order, confirm: 'Are you sure?', method: :delete %></td>
-  </tr>
-<% end %>
-</table>
+  <% @orders.each do |order| %>
+    <tr>
+      <td><%= order.customer_name %></td>
+      <td><%= order.quantity %></td>
+      <td><%= order.item_name %></td>
+      <td><%= order.total_cost %></td>
+      <td><%= link_to 'Show', order %></td>
+      <td><%= link_to 'Edit', edit_order_path(order) %></td>
+      <td><%= link_to 'Destroy', order, confirm: 'Are you sure?', method: :delete %></td>
+    </tr>
+  <% end %>
+  </table>
 
-<br />
+  <br />
 
-<%= link_to 'New Order', new_order_path %>
+  <%= link_to 'New Order', new_order_path %>
+</div>
