--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New order</h1>
+<div class= "container">
+	<div class="hero-unit"><h1>New order</h1></div>
 
-<%= render 'form' %>
+	<%= render 'form' %>
 
-<%= link_to 'Back', orders_path %>
+	<%= link_to 'Back', orders_path %>
+</div>
