--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container" >
     <div class="hero-unit"><h1>Customer List</h1></div>
 
-    <table class="table table-striped">
+    <table class="table table-rounded table-striped">
       <tr>
         <th>Name</th>
         <th>Phone number</th>
