--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container" >
   <div class="hero-unit"><h1>Listing orders</h1></div>
 
-  <table class="table table-striped">
+  <table class="table table-rounded table-striped">
     <tr>
       <th>Customer</th>
       <th>Quantity</th>
