--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -18,11 +18,11 @@
         <td><%= customer.name %></td>
         <td><%= customer.phone_number %></td>
         <td><%= customer.contact %></td>
-        <td><%= link_to 'Show', customer_orders_path(customer) %></td>
+        <td><%= link_to 'Show', customer %></td>
         <td><%= link_to 'Edit', edit_customer_path(customer) %></td>
         <td><%= link_to 'Destroy', customer, confirm: 'Are you sure?', method: :delete %></td>
         <td><%= link_to 'Place Order', new_customer_order_path(customer) %></td>
-        <td><%= link_to 'View Orders', customer %></td>
+        <td><%= link_to 'View Orders', customer_orders_path(customer) %></td>
       </tr>
     <% end %>
     </table>
