--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -1,7 +1,20 @@
 <div class="container" >
  <p id="notice"><%= notice %></p>
 
-	<%= display_customer_orders(@customer) %>
+ 	<p>
+ 		<b>Name:</b>
+ 		<%= @customer.name %>
+ 	</p>
+
+ 	<p>
+ 		<b>Phone:</b>
+ 		<%= @customer.phone_number %>
+ 	</p>
+
+ 	<p>
+ 		<b>Contact:</b>
+ 		<%= @customer.contact %>
+ 	</p>
 
 	<%= link_to 'Edit', edit_customer_path(@customer) %> | <%= link_to 'Back', customers_path %>
 
